# BrownieAtelierController

./: .gitignore  .gitmodules  Pipfile  README.md  host.json  pyproject.toml  requirements.txt  test_http_trigger.py  test_settings.py
.github/workflows/: brownie_atelier_controller_deploy.yml  function_app_settings.yml
BrownieAtelierBlobTrigger/: __init__.py  function.json
BrownieAtelierHttpTrigger/: __init__.py  brownie_atelier_http_trigger_input.py
BrownieAtelierStorage/models/: controller_que_model.py
BrownieAtelierTimerTrigger/: __init__.py  function.json
env_file/: .env.gh.secrets.PRODUCT.example  .env.gh.secrets.TEST.example  .env.gh.vars.PRODUCT.example  .env.gh.vars.TEST.example  README.md
scripts/: generate-github-env-files.sh  set-github-env-vars.sh  terraform-run.sh
shared/: brownie_atelier_app_settings.py  brownie_atelier_mongo_settings.py  brownie_atelier_news_crawler_settings.py  command_execution.py  container_status_check.py  resource_client_get.py  settings.py
terraform/: README.md
terraform/environments/product/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: test_container_status.py  test_http_trigger.py  test_resource_client_get.py  test_settings.py
