[project]
name = "004-brownieateliercontroller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-common>=1.1.28",
    "azure-core>=1.34.0",
    "azure-functions>=1.23.0",
    "azure-identity>=1.23.0",
    "azure-keyvault-secrets>=4.10.0",
    "azure-mgmt-containerinstance>=10.1.0",
    "azure-mgmt-core>=1.5.0",
    "azure-mgmt-resource>=24.0.0",
    "azure-storage-blob>=12.25.1",
    "azure-storage-file-share>=12.21.0",
    "azure-storage-queue>=12.12.0",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
]
